# Trabalho-Individual-2022-2-

./: README.md  docker-compose.yml  dockerfile
.github/workflows/: python-app.yml  python-lint.yml  python-poetry.yml  python-sphinx-documentation.yml  python-tests.yml
poetry-meu-pip/: pyproject.toml  requirements.txt
poetry-tf/: pyproject.toml
src/docs/: conf.py
src/docs/_build/doctrees/: data_pipeline.doctree  data_pipeline.feature_engineering.doctree  data_pipeline.pre_processing.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree  parser.doctree
src/docs/_build/html/: .buildinfo  data_pipeline.feature_engineering.html  data_pipeline.html  data_pipeline.pre_processing.html  genindex.html  index.html  main.html  modules.html  objects.inv  parser.html  py-modindex.html  search.html  searchindex.js
src/docs/_build/html/_modules/: index.html
src/docs/_build/html/_modules/data_pipeline/feature_engineering/: key_smash.html  word_embedding.html
src/docs/_build/html/_modules/data_pipeline/pre_processing/: concatenate_columns.html
src/docs/_build/html/_modules/parser/: feature_engineering_parser.html  model_parser.html  parser_base.html
src/docs/_build/html/_sources/: index.rst.txt
tests/: example.py
