[tool.poetry]
name = "poetry-meu-pip"
version = "0.1.0"
description = "Projeto final da disciplina de gces - UnB"
authors = ["ArthurMeloG"]
readme = "README.md"
packages = [{include = "poetry_base"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
